--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             </li>
             <li class="nav-item">
               <!-- Nav Link -->
-              <a class="nav-link" data-scroll href="#about-us">About Us.</a>
+              <a class="nav-link" data-scroll href="#about-us">Sobre nosotros.</a>
             </li>
             <li class="nav-item">
               <!-- Nav Link -->
-              <a class="nav-link" data-scroll href="#portfolio">Portfolio.</a>
+              <a class="nav-link" data-scroll href="#portfolio">Nuestra APP.</a>
             </li>
             <li class="nav-item">
               <!-- Nav Link -->
@@ -50,14 +50,14 @@
             </li>
             <li class="nav-item">
               <!-- Nav Link -->
-              <a class="nav-link" data-scroll href="#contact-us">Contact Us.</a>
+              <a class="nav-link" data-scroll href="#contact-us">Contactanos.</a>
             </li>
             <li class="nav-item dropdown">
               <!-- Lang Dropdown Link -->
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">EN</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <!-- Lang Dropdown Choice -->
-                <a class="dropdown-item" href="#">DE </a>
+                <a class="dropdown-item" href="#">US </a>
                 <!-- Lang Dropdown Choice -->
                 <a class="dropdown-item" href="#">ES </a>
               </div>
@@ -75,7 +75,7 @@
       <img src="images/hero.svg" alt="">
       <div class="container">
         <!-- Hero Title -->
-        <h1>The Spirit of<br>Digital Agency.</h1>
+        <h1>Cambiar la forma de ver <br>el acueducto.</h1>
         <!-- Hero Title Info -->
         <p>Vestibulum ac diam sit amet quam vehicula elementum<br> amet est on dui. Nulla porttitor accumsan tincidunt.</p>
         <div class="hero-btns">
