--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light ">
         <!-- Change Logo Img Here -->
-        <a class="navbar-brand" href="#"><img src="images/logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><img src="images/logo.jpeg" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <div class="interactive-menu-button">
             <a href="#">
@@ -65,7 +65,7 @@
           </ul>
           <form data-scroll href="#contact-us" class="contact-btn form-inline my-2 my-lg-0">
             <!-- Contacgt Us Button -->
-            <button>Contact Us</button>
+            <button>Contactanos</button>
           </form>
         </div>
       </nav>
@@ -75,14 +75,12 @@
       <img src="images/hero.svg" alt="">
       <div class="container">
         <!-- Hero Title -->
-        <h1>Cambiar la forma de ver <br>el acueducto.</h1>
+        <h1>La app pensada <br>para Cambiar la <br>forma de ver <br>el acueducto.</h1>
         <!-- Hero Title Info -->
-        <p>Vestibulum ac diam sit amet quam vehicula elementum<br> amet est on dui. Nulla porttitor accumsan tincidunt.</p>
+        <p>Queremos que el acueducto sea para todos<br> el agua es para todo el mundo.</p>
         <div class="hero-btns">
-          <!-- Hero Btn First -->
-          <a data-scroll href="#about-us">More About us</a>
-          <!-- Hero Btn Second -->
-          <a data-scroll href="#contact-us">Get in Touch.</a>
+          
+          <a data-scroll href="#about-us">Mas acerca de nosotros</a>
         </div>
       </div>
     </div>
