--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
           <li><a onclick="$('header').animatescroll({padding:71});">Inicio</a></li>
           <li><a onclick="$('.detail').animatescroll({padding:71});">Pantalla</a></li>
           <li><a onclick="$('.features').animatescroll({padding:71});">Características</a></li>
-          <li><a onclick="$('.social').animatescroll({padding:71});">Social </a></li>
+          <li><a onclick="$('.blog').animatescroll({padding:71});">Blog </a></li>
+          <li><a onclick="$('.portal').animatescroll({padding:71});">Portal </a></li>
         </ul>
       </div>
     </div>
@@ -94,9 +95,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-offset-2 col-md-8">
-          <h1>Everything's easily customizable.</h1>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-          <button type="button" class="app-store"></button>
+          <h1>Ecuentra nuestra aplicaion en cualquier tienda de aplicaciones.</h1>
+          <p class="lead">Si no tienes smartphone puedes ingresar a nuestro <a href="portal.html"><b>portal</b></a></p>
+          <button type="button" class="apple-app-store"></button>
+          <button type="button" class="android-app-store"></button>
         </div>
       </div>
     </div>
