--- a/index.html
+++ b/index.html
@@ -91,18 +91,18 @@
 
   <!-- PURCHASE
 	      ================================================== -->
-  <section class="purchase">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-offset-2 col-md-8">
-          <h1>Ecuentra nuestra aplicaion en cualquier tienda de aplicaciones.</h1>
-          <p class="lead">Si no tienes smartphone puedes ingresar a nuestro <a href="portal.html"><b>portal</b></a></p>
-          <button type="button" class="apple-app-store"></button>
-          <button type="button" class="android-app-store"></button>
-        </div>
-      </div>
-    </div>
-  </section>
+        <section class="purchase">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-offset-2 col-md-8">
+                <h1>Ecuentra nuestra aplicacion en cualquier tienda.</h1>
+                <p class="lead">Si no tienes smartphone puedes ingresar a nuestro <a href="portal.html"><b>portal</b></a></p>
+                <button type="button" class="apple-app-store"></button>
+                <button type="button" class="android-app-store"></button>
+              </div>
+            </div>
+          </div>
+        </section>
 
 
   <!-- PAYOFF 
@@ -111,16 +111,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna.</h1>
+          <h1>La aplicacion ideal para la informacion del acueducto</h1>
         </div>
       </div>
     </div>
   </section>
 
-
-  <!-- DETAILS 
-	      ================================================== -->
   <section class="detail">
     <div class="container">
       <div class="row">
@@ -132,9 +128,8 @@
               <div class="item active">
                 <div class="row">
                   <div class="col-sm-12 col-md-offset-1 col-md-6">
-                    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna.</p>
+                    <h1>Un diseño para que todas las personas puedan usar.</h1>
+                    <p>Nuestra app esta diseñada para que todas las personas la puedan usar</p>
                   </div>
                   <div class="col-sm-12 col-md-5">
                     <div class="app-screenshot">
@@ -146,9 +141,8 @@
               <div class="item">
                 <div class="row">
                   <div class="col-sm-12 col-md-offset-1 col-md-6">
-                    <h1>Sed do eiusmod tempor incididunt ut labore et dolore magna.</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna.</p>
+                    <h1>Respuestas rapidas para todas tus peticiones.</h1>
+                    <p>Con nuestra app puedes reportar todo lo que sucede en tu zona con el acueducto.</p>
                   </div>
                   <div class="col-sm-12 col-md-5">
                     <div class="app-screenshot">
@@ -160,9 +154,8 @@
               <div class="item">
                 <div class="row">
                   <div class="col-sm-12 col-md-offset-1 col-md-6">
-                    <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna.</p>
+                    <h1>Chat 24/7 </h1>
+                    <p>Nuestro chat siempre esta disponible para cualquier emergencia</p>
                   </div>
                   <div class="col-sm-12 col-md-5">
                     <div class="app-screenshot">
@@ -194,23 +187,22 @@
 
         <div class="col-md-4">
           <div class="circle"><i class="icon-bookmark"></i></div>
-          <h2>Quick &amp; Easy Setup</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna.</p>
+          <h2>Simple &amp; Rapidos reportes</h2>
+          <p>No te tienes que molestar en hacer un reporte detallado y demorate 30 mins en hacerlo solo que le des a la opcion
+            indicada del reporte y describas el problema ya estaria para que los tecnicos revisen con detalle.</p>
         </div>
 
         <div class="col-md-4">
           <div class="circle"><i class="icon-keypad"></i></div>
-          <h2>Parallax Scrolling</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna.</p>
+          <h2>Siempre actualizado</h2>
+          <p>Cada actualizacion de las noticias del acueducto de tu zona te va a salir una notificacion en el celularo o computador para que siempre lo tengas presente
+            tambien se enviara un sms si es algo grave para que esten atentos.</p>
         </div>
 
         <div class="col-md-4">
           <div class="circle"><i class="icon-like"></i></div>
-          <h2>Responsive Design</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna.</p>
+          <h2>Diseño responsivo</h2>
+          <p>Nuestro diseño esta orientado para toda clase de personas sin importar la edad que no tengan problemas al entrar a la app.</p>
         </div>
 
       </div>
@@ -224,12 +216,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h2>Connect with us</h2>
+          <h2>Conectate con nosotros </h2>
           <a class="icon-facebook"></a>
           <a class="icon-twitter"></a>
-          <a class="icon-google"></a>
-          <a class="icon-instagram"></a>
-          <a class="icon-pinterest"></a>
         </div>
       </div>
     </div>
@@ -241,11 +230,18 @@
   <section class="get-it">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <h1>Avaialable now on the App Store</h1>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-          <button type="button" class="app-store"></button>
-        </div>
+        <section class="purchase">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-offset-2 col-md-8">
+                <h1>Ecuentra nuestra aplicacion en cualquier tienda.</h1>
+                <p class="lead">Si no tienes smartphone puedes ingresar a nuestro <a href="portal.html"><b>portal</b></a></p>
+                <button type="button" class="apple-app-store"></button>
+                <button type="button" class="android-app-store"></button>
+              </div>
+            </div>
+          </div>
+        </section>
         <div class="col-md-12">
           <hr />
           <ul>
