--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="item active">
-                  <img src="img/screenshots/app-1.png" alt="App Screen 1">
+                  <img src="img/screenshots/app-1.jpeg" alt="App Screen 1">
                 </div>
                 <div class="item">
-                  <img src="img/screenshots/app-2.png" alt="App Screen 2">
+                  <img src="img/screenshots/app-2.jpeg" alt="App Screen 2">
                 </div>
                 <div class="item">
-                  <img src="img/screenshots/app-3.png" alt="App Screen 3">
+                  <img src="img/screenshots/app-3.jpeg" alt="App Screen 3">
                 </div>
 
               </div>
@@ -133,7 +133,7 @@
                   </div>
                   <div class="col-sm-12 col-md-5">
                     <div class="app-screenshot">
-                      <img src="img/screenshots/app-1.png" class="img-responsive" alt="App Screen 1">
+                      <img src="img/screenshots/app-4.jpeg" class="img-responsive" alt="App Screen 1">
                     </div>
                   </div>
                 </div>
@@ -146,7 +146,7 @@
                   </div>
                   <div class="col-sm-12 col-md-5">
                     <div class="app-screenshot">
-                      <img src="img/screenshots/app-2.png" class="img-responsive" alt="App Screen 2">
+                      <img src="img/screenshots/app-3.jpeg" class="img-responsive" alt="App Screen 2">
                     </div>
                   </div>
                 </div>
@@ -159,7 +159,7 @@
                   </div>
                   <div class="col-sm-12 col-md-5">
                     <div class="app-screenshot">
-                      <img src="img/screenshots/app-3.png" class="img-responsive" alt="App Screen 3">
+                      <img src="img/screenshots/app-2.jpeg" class="img-responsive" alt="App Screen 3">
                     </div>
                   </div>
                 </div>
