--- a/index.html
+++ b/index.html
@@ -245,12 +245,11 @@
         <div class="col-md-12">
           <hr />
           <ul>
-            <li><a href="#link-here">Contact</a></li>
+            <li><a href="#link-here">Contacto</a></li>
             <li><a href="#link-here">Twitter</a></li>
-            <li><a href="#link-here">Press</a></li>
-            <li><a href="#link-here">Support</a></li>
-            <li><a href="#link-here">Developers</a></li>
-            <li><a href="#link-here">Privacy</a></li>
+            <li><a href="#link-here">Soporte</a></li>
+            <li><a href="#link-here">Desarrolladores</a></li>
+            <li><a href="#link-here">Privacidad</a></li>
           </ul>
         </div>
       </div>
