cambio de color de la pagina

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
         <div class="col-md-4">
           <div class="circle"><i class="icon-bookmark"></i></div>
-          <h2>Simple &amp; Rapidos reportes</h2>
+          <h2>Simples &amp; Rapidos reportes</h2>
           <p>No te tienes que molestar en hacer un reporte detallado y demorate 30 mins en hacerlo solo que le des a la opcion
             indicada del reporte y describas el problema ya estaria para que los tecnicos revisen con detalle.</p>
         </div>
