--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         ================================================== -->
   <!-- Bootstrap 3-->
   <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-  <link rel="icon" type="image/jpeg" href="img/logo.jpeg" />
+  <link rel="icon" type="image/ico" href="img/logo.ico" />
   <!-- Google Fonts -->
   <link
     href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic|Roboto+Condensed:300italic,400italic,700italic,400,300,700'
@@ -71,13 +71,13 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="item active">
-                  <img src="img/screenshots/app-1.jpeg" alt="App Screen 1">
+                  <img src="img/screenshots/app-1.png" alt="App Screen 1">
                 </div>
                 <div class="item">
-                  <img src="img/screenshots/app-2.jpeg" alt="App Screen 2">
+                  <img src="img/screenshots/app-2.png" alt="App Screen 2">
                 </div>
                 <div class="item">
-                  <img src="img/screenshots/app-3.jpeg" alt="App Screen 3">
+                  <img src="img/screenshots/app-3.png" alt="App Screen 3">
                 </div>
 
               </div>
@@ -133,7 +133,7 @@
                   </div>
                   <div class="col-sm-12 col-md-5">
                     <div class="app-screenshot">
-                      <img src="img/screenshots/app-4.jpeg" class="img-responsive" alt="App Screen 1">
+                      <img src="img/screenshots/app-4.png" class="img-responsive" alt="App Screen 1">
                     </div>
                   </div>
                 </div>
@@ -146,7 +146,7 @@
                   </div>
                   <div class="col-sm-12 col-md-5">
                     <div class="app-screenshot">
-                      <img src="img/screenshots/app-3.jpeg" class="img-responsive" alt="App Screen 2">
+                      <img src="img/screenshots/app-3.png" class="img-responsive" alt="App Screen 2">
                     </div>
                   </div>
                 </div>
@@ -159,7 +159,7 @@
                   </div>
                   <div class="col-sm-12 col-md-5">
                     <div class="app-screenshot">
-                      <img src="img/screenshots/app-2.jpeg" class="img-responsive" alt="App Screen 3">
+                      <img src="img/screenshots/app-2.png" class="img-responsive" alt="App Screen 3">
                     </div>
                   </div>
                 </div>
