--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>AQUAYUDA</title>
   <meta charset="utf-8" />
-  <meta name="author"content="Juan Pablo Sanchez gaitan"/>
+  <meta name="author" content="Juan Pablo Sanchez gaitan" />
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- CSS 
         ================================================== -->
@@ -91,18 +91,18 @@
 
   <!-- PURCHASE
 	      ================================================== -->
-        <section class="purchase">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-offset-2 col-md-8">
-                <h1>Ecuentra nuestra aplicacion en cualquier tienda.</h1>
-                <p class="lead">Si no tienes smartphone puedes ingresar a nuestro <a href="portal.html"><b>portal</b></a></p>
-                <button type="button" class="apple-app-store"></button>
-                <button type="button" class="android-app-store"></button>
-              </div>
-            </div>
-          </div>
-        </section>
+  <section class="purchase">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-offset-2 col-md-8">
+          <h1>Ecuentra nuestra aplicacion en cualquier tienda.</h1>
+          <p class="lead">Si no tienes smartphone puedes ingresar a nuestro <a href="portal.html"><b>portal</b></a></p>
+          <button type="button" class="apple-app-store"></button>
+          <button type="button" class="android-app-store"></button>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <!-- PAYOFF 
@@ -188,21 +188,24 @@
         <div class="col-md-4">
           <div class="circle"><i class="icon-bookmark"></i></div>
           <h2>Simples &amp; Rapidos reportes</h2>
-          <p>No te tienes que molestar en hacer un reporte detallado y demorate 30 mins en hacerlo solo que le des a la opcion
+          <p>No te tienes que molestar en hacer un reporte detallado y demorate 30 mins en hacerlo solo que le des a la
+            opcion
             indicada del reporte y describas el problema ya estaria para que los tecnicos revisen con detalle.</p>
         </div>
 
         <div class="col-md-4">
           <div class="circle"><i class="icon-keypad"></i></div>
           <h2>Siempre actualizado</h2>
-          <p>Cada actualizacion de las noticias del acueducto de tu zona te va a salir una notificacion en el celularo o computador para que siempre lo tengas presente
+          <p>Cada actualizacion de las noticias del acueducto de tu zona te va a salir una notificacion en el celularo o
+            computador para que siempre lo tengas presente
             tambien se enviara un sms si es algo grave para que esten atentos.</p>
         </div>
 
         <div class="col-md-4">
           <div class="circle"><i class="icon-like"></i></div>
           <h2>Diseño responsivo</h2>
-          <p>Nuestro diseño esta orientado para toda clase de personas sin importar la edad que no tengan problemas al entrar a la app.</p>
+          <p>Nuestro diseño esta orientado para toda clase de personas sin importar la edad que no tengan problemas al
+            entrar a la app.</p>
         </div>
 
       </div>
@@ -235,7 +238,8 @@
             <div class="row">
               <div class="col-md-offset-2 col-md-8">
                 <h1>Ecuentra nuestra aplicacion en cualquier tienda.</h1>
-                <p class="lead">Si no tienes smartphone puedes ingresar a nuestro <a href="portal.html"><b>portal</b></a></p>
+                <p class="lead">Si no tienes smartphone puedes ingresar a nuestro <a
+                    href="portal.html"><b>portal</b></a></p>
                 <button type="button" class="apple-app-store"></button>
                 <button type="button" class="android-app-store"></button>
               </div>
